[project]
name = "flax-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.7.4",
    "jax>=0.4.17",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "secretflow>=1.11.0b1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
